--- a/WEBPAGE Tutorial/webpage/index.html
+++ b/WEBPAGE Tutorial/webpage/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kitty Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -29,15 +32,15 @@
                     <img src="../2024 crash course source files/menu.svg" alt="Open menu">
                 </a>
                 <ul>
-                    <li>
+                    <li class="hide-desktop">
                         <a href="#" class="menu-close">
                             <img src="../2024 crash course source files/close.svg" alt="Close menu">
                         </a>
-                        <li><a href="#">Our Food</a></li>
-                        <li><a href="#">Ingredients</a></li>
-                        <li><a href="#">Studies</a></li>
-                        <li><a href="#">FAQ</a></li>
                     </li>
+                    <li><a href="#">Our Food</a></li>
+                    <li><a href="#">Ingredients</a></li>
+                    <li><a href="#">Studies</a></li>
+                    <li><a href="#">FAQ</a></li>
                 </ul>
             </nav>
             <!-- NAVBAR -->
@@ -66,7 +69,22 @@
         <!-- Hero Image -->
 
     </div> <!-- WRAPPER -->
+    
+    <script>
 
+        const menu = document.querySelector('nav ul');
+        const menuBtn = document.querySelector('.menu-open');
+        const closeBtn = document.querySelector('.menu-close');
+
+        menuBtn.addEventListener('click', () => {
+            menu.classList.add('open');
+        })
+
+        closeBtn.addEventListener('click', () => {
+            menu.classList.remove('open');
+        })
+
+    </script>
 </body>
 
 </html>
